# flask-sqlalchemy-boiler-plate

./: alembic.ini  pyproject.toml
tests/: test_boiler_plate.py
